reply profile pictyre squash bug fixed

--- a/src/Components/MotoRoute/MotoRouteComments.scss
+++ b/src/Components/MotoRoute/MotoRouteComments.scss
@@ -21,6 +21,8 @@
     .comments-reply {
         flex: 1;
         min-height: 6em;
+        min-width: 0;
+        margin-left: 0.5em;
         padding: 0.4em 0.8em;
     }
 
